fix overlapping

--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,7 @@ p.center{
   font-size: 1em;
   text-align: center;
   overflow: hidden;
-  position: fixed;
+  /* position: fixed; */
   /* justify-content: flex-start; */
 }
 
